--- a/TournamentGenerator/TournamentGenerator.csproj
+++ b/TournamentGenerator/TournamentGenerator.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IronXL.Excel" Version="2022.9.9454" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="DB\DB.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
